# NeoGebra

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
Lib/FreeType/: CMAKELists.txt  README.md
Lib/FreeType/include/: shader_configure.h  text_fonts_glyphs.h
Lib/cvc5/: CMakeLists.txt
Lib/cvc5/test/regress/cli/regress0/fp/: rti_3_5_bug.smt2
Lib/cvc5/test/regress/cli/regress1/datatypes/: issue3266-small.smt2
Lib/cvc5/test/regress/cli/regress1/nl/: issue3955-ee-double-notify.smt2
Lib/cvc5/test/regress/cli/regress1/sygus/: double.sy  extract.sy  pbe_multi.sy  phone-1-long.sy  univ_2-long-repeat.sy
Lib/cvc5/test/regress/cli/regress2/: bug812.smt2  issue6495-dup-pat-term.smt2
Lib/cvc5/test/regress/cli/regress3/: specsharp-WindowsCard.15.RTE.Terminate_System.Int32.smt2
Lib/glad/: CMakeLists.txt
Lib/glad/include/glad/: glad.h
Lib/glad/src/: glad.c
Lib/stb/: CMakeLists.txt
NeoGebra/: CMakeLists.txt
NeoGebra/assets/fonts/defaultFont/: info.txt
NeoGebra/assets/shaders/: graphShader.frag  graphShader.vert  graphShader1.comp  graphShader2.comp  graphShader3.comp  graphShader4.comp  lineShader.frag  lineShader.vert  squareShader.frag  squareShader.vert  textShader.frag  textShader.vert
NeoGebra/src/: Application.cpp  Application.h  Constants.h  Constants.h.in  GraphRenderer.cpp  GraphRenderer.h  GraphShader.cpp  GraphShader.h  LineRenderer.cpp  ModelManager.cpp  ModelManager.h  Objects.h  Renderer.cpp  Renderer.h  TextRenderer.cpp  Util.cpp  Util.h  Window.cpp  Window.h  main.cpp
NeoGebra/src/Maths/: Equation.cpp  Equation.h  Model.cpp  Model.h  PostulateVerifier.cpp  PostulateVerifier.h
NeoGebra/src/Rendering/: GraphComputeShaderManager.cpp  GraphComputeShaderManager.h  GraphRenderer.cpp  GraphRenderer.h  GraphShader.cpp  GraphShader.h  LineRenderer.cpp  LineRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SquareRenderer.cpp  SquareRenderer.h  TextRenderer.cpp  TextRenderer.h
NeoGebra/src/UI/: ButtonUI.cpp  ButtonUI.h  DistanceTestUI.cpp  DistanceTestUI.h  EquationUI.cpp  EquationUI.h  ErrorBox.cpp  ErrorBox.h  ExtrasWindowUI.cpp  ExtrasWindowUI.h  FPSCounterUI.cpp  FPSCounterUI.h  GraphUI.cpp  GraphUI.h  KeyboardUI.cpp  KeyboardUI.h  MainWindowUI.cpp  MainWindowUI.h  MenuUI.cpp  MenuUI.h  PermaButtonUI.cpp  PermaButtonUI.h  PostulateResult.cpp  PostulateResult.h  PostulateVerifierResultUI.cpp  PostulateVerifierResultUI.h  TabUI.cpp  TabUI.h  TestUI.cpp  TestUI.h  TextInputField.cpp  TextInputField.h  TextInputFieldWithDesc.cpp  TextInputFieldWithDesc.h  ToggleButtonUI.cpp  ToggleButtonUI.h  UIElement.cpp  UIElement.h  VariableWindowUI.cpp  VariableWindowUI.h  (+2 more)
NietEuclidischeGeogebra/: CMakeLists.txt  shader_text.frag  shader_text.vert
NietEuclidischeGeogebra/assets/fonts/arialFont/: info.txt
NietEuclidischeGeogebra/assets/fonts/defaultFont/: README  info.txt
NietEuclidischeGeogebra/assets/shaders/: graphShader.comp  graphShader.frag  graphShader.vert  graphShader1.comp  graphShader2.comp  graphShader3.comp  lineShader.frag  lineShader.frags  lineShader.vs  squareShader.frag
NietEuclidischeGeogebra/src/: Application.cpp  Application.h  Constants.h  GraphRenderer.cpp  GraphRenderer.h  GraphShader.cpp  GraphShader.h  LineRenderer.cpp  LineRenderer.h  ModelManager.cpp  ModelManager.h  Objects.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SquareRenderer.cpp  TextRenderer.cpp  TextRenderer.h  Util.cpp  Util.h  Window.cpp  Window.h  main.cpp  shader_configure.h  text_fonts_glyphs.h
NietEuclidischeGeogebra/src/Maths/: Coordinates.cpp  Coordinates.h  Matrix.h
NietEuclidischeGeogebra/src/UI/: ButtonUI.cpp  ButtonUI.h  EquationUI.cpp  EquationUI.h  GraphUI.cpp  GraphUI.h  KeyboardUI.cpp  KeyboardUI.h  MenuUI.cpp  MenuUI.h  PermaButtonUI.cpp  PermaButtonUI.h  PostulateVerifierResultUI.cpp  PostulateVerifierResultUI.h  TabUI.cpp  TabUI.h  TextInputField.cpp  TextInputField.h  TextInputFieldWithDesc.cpp  TextInputFieldWithDesc.h  UIElement.cpp  UIElement.h  WindowUI.cpp  WindowUI.h
PostulateVerifier/: CMakeLists.txt
PostulateVerifier/include/PostulateVerifier/: PostulateVerifier.h
PostulateVerifier/src/: Equation.cpp  Equation.h  Model.cpp  Model.h  Point.h  Z3Tools.cpp  Z3Tools.h  main.cpp
Tests/: CMakeLists.txt
Tests/src/: main.cpp
Text/: CMAKELists.txt
Text/src/: main.cpp
